Changes in <next version>:
 * Cleanup of stylesheet, setting and widget code
 * Fix filename chooser and embedding in ImageFile widget
 * Force C++11 compilation on Unix
 * Fix document reload, export warning and unsafe loading dialogs

Changes in 2.0.1:
 * Fix crash setting manual bins in histogram dialog box
 * Add missing DLLs to Windows installer
 * Fix version number in Mac OS package
 * Add new colormaps (thanks to yingchaolu)

Changes in 2.0:
 * Update to PyQt5 and Qt5
 * Use Ghostscript to write EPS/PS formats
 * Use pyinstaller for MacOS builds instead of py2app
 * Windows build requires Windows 7 minimum
 * MacOS build requires MacOS 10.10 minimum
 * Move to using Sphinx for documentation
 * Add Makefile for documentation and remove build script
 * Use isfinite() on FreeBSD
 * Drop old veusz_listen script in favour of veusz --listen

Changes in 1.27:
 * New FITS import code and user interface, allowing much more
   flexible and convenient FITS importing
 * Fix half pixel error in linear WCS FITS support
 * Save custom definitions after importing data, to allow customs
   to depend on datasets.
 * Add preference for loading translation file
 * Fix logical errors in transparency in image widget
 * If cannot find translation or plugin, do not end app after showing error
 * Fix for Python 3 for reloading datasets

Changes in 1.26.1:
 * Change homepage in program to new site https://veusz.github.io/
 * Change new version checking to use veusz.github.io

Changes in 1.26:
 * Add color themes and automatic coloring of widgets
 * Custom color definitions
 * Improved custom definition dialog box
 * Fix loading translator via command line
 * Show horizontal error lines/fills in key
 * Use iMinuit if available for fitting
 * Fix for dataset plugins returning nD datasets
 * Add editable automatic axis range, including support for shrinking
   range (-X%), percentage ranges (X-Y%) and limits (<X% and >Y%)
 * Fix for key if invalid dataset