@@ -1,4 +1,7 @@
 Changes in <next version>:
+ * If file cannot be imported on document load, ask user for a new filename
+ * Only open HDF5 files in readonly mode
+ * Do not simply log errors when loading data with ImportPlugins
  * Cleanup of stylesheet, setting and widget code
  * Fix filename chooser and embedding in ImageFile widget
  * Force C++11 compilation on Unix
